--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -40,6 +40,10 @@ en:
       subtitle: "Enter your email address to receive a link to reset your password."
       submit: "Send reset link"
       spam_notice: "Note: Also check your spam folder if you don't find the email in your inbox."
+      edit_title: "Set new password"
+      edit_subtitle: "Enter your new password twice to confirm it."
+      edit_submit: "Change password"
+      min_length: "at least %{count} characters"
     registrations:
       title: "Sign up for free"
       subtitle: "Create an account to use Voidfiles to its full potential."
